# fs_utilities

./: Cargo.toml  README.md
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/safe-transmute-0.11.3/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-token-3.5.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-token-4.0.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-token-group-interface-0.1.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-token-metadata-interface-0.2.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-transfer-hook-interface-0.3.0/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-transfer-hook-interface-0.4.1/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/spl-type-length-value-0.3.0/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/static-alloc-0.2.5/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/syn-2.0.23/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tempfile-3.17.1/: .cargo_vcs_info.json
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/ucs2-0.3.2/: .cargo_vcs_info.json  Cargo.toml
.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/uefi-0.20.0/: .cargo_vcs_info.json  Cargo.toml
src/: lib.rs
(+7 files in other folders)
