[package]
name = "fs_utils"
version = "0.1.0"
edition = "2024"
description = "A comprehensive library for file system operations with progress reporting and advanced search capabilities"
authors = ["Mohtashim Nawaz mohtashim3nawaz@gmail.com"]
license = "MIT"
repository = ""
keywords = [
    "filesystem",
    "file",
    "directory",
    "search",
]
categories = [
    "filesystem",
    "utility",
    "command-line-utilities",
]

[dependencies]
anyhow = "1.0"
glob = "0.3"
regex = "1.10"
tokio = { version = "1.0", features = ["full"] }
indicatif = "0.17"
bytesize = "1.3"
walkdir = "2.4"
futures = "0.3"
crossbeam = "0.8"
log = "0.4"
tempfile = "3.3" 